--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   animations: ^2.0.0 
   flutter_svg: ^2.0.7
+  cached_network_image: ^3.2.3 # hoặc phiên bản mới nhất
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
