--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   animations: ^2.0.0 
   flutter_svg: ^2.0.7
   cached_network_image: ^3.2.3 # hoặc phiên bản mới nhất
+  url_launcher: ^6.3.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
